Update index.html dan style.css

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Respomsive</title>
+    <title>responsive</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="hero">
         <div class="navbar">
             <img src="images/logo.png" class="logo">
-            <button type="button"> Sign Up</button>
+            <button type="button">Sign Up</button>
         </div>
         <div class="content">
-            <small>Welcome to my</small>
+            <small>Welcome to our</small>
             <h1>World's<br>Creative Studio</h1>
             <button type="button">Take a tour</button>
         </div>
@@ -31,17 +31,18 @@
                 <img src="images/share.png">
                 <img src="images/info.png">
             </div>
-
-            <div class="bubbles">
-                <img src="images/bubble.png">
-                <img src="images/bubble.png">
-                <img src="images/bubble.png">
-                <img src="images/bubble.png">
-                <img src="images/bubble.png">
-                <img src="images/bubble.png">
-                <img src="images/bubble.png">
-            </div>
         </div>
+
+        <div class="bubbles">
+            <img src="images/bubble.png">
+            <img src="images/bubble.png">
+            <img src="images/bubble.png">
+            <img src="images/bubble.png">
+            <img src="images/bubble.png">
+            <img src="images/bubble.png">
+            <img src="images/bubble.png">
+        </div>
+
     </div>
 </body>
 </html>
